--- a/awards.html
+++ b/awards.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2019 Drama Festivals</title>
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="awards.css">
 </head>
 <body>
@@ -17,23 +18,27 @@
                 </ul>
             </nav>
         <div class="container">
-            <h1>
+            <div id="overlay">
+            <h1 class="awards">
                 Awards
             </h1>
-            <img src="https://lh3.googleusercontent.com/sCPNGquqsPpqvEZNmB7ka7NUZkKbX4S3A2s6gGAQ-1dFQAPyCGDTDk0gCFYsp1iSB9cG=s136" class="winners">
+            <img src="https://lh3.googleusercontent.com/sCPNGquqsPpqvEZNmB7ka7NUZkKbX4S3A2s6gGAQ-1dFQAPyCGDTDk0gCFYsp1iSB9cG=s136" class="winners" height="200">
             <p>
              Makini school wins the junior category for the best play in 2019!!
             </p>
             <h1>
                 List of winners of 2019 Kenya National Drama and Film Festival 
             </h1>
+            <div class="secondary">
             <h2>
                 Secondary schools category
             </h2>
             <table id="category">
                 <tr id="indian">
+                    <span>
                     <th>Category</th>
                     <th>Top 3 schools</th>
+                    </span>
                 </tr>
                 <tr>
                     <th>Play</th>
@@ -96,13 +101,17 @@
                         </td>
                 </tr>
             </table>
+        </div>
+           <div class="university">
             <h2>
                 Universities Category
             </h2>
             <table id="category">
                     <tr id="indian">
+                        <span>
                             <th>Category</th>
                             <th>Top 3 schools</th>
+                            </span>
                         </tr>
                         <tr>
                                 <th>Play</th>
@@ -175,48 +184,52 @@
                                 </td>
                         </tr>                                 
             </table>
-            <div class="contacts">
-                    <footer>
-                    <table id="contacts">
-                        <tr>
-                            <th>Account</th>
-                            <th>Info</th>
-                        </tr>
-                        <tr>
-                            <td>Log in</td>
-                            <td>Help</td>
-                        </tr>
-                        <tr>
-                            <td>Register</td>
-                            <td>Contact us</td>
-                        </tr>
-                        <tr>
-                            <td>My account</td>
-                            <td>Security & privacy</td>
-                        </tr>
-                        <tr>
-                            <td>latest news</td>
-                            <td>News & Trends</td>
-                        </tr>
-                        <tr>
-                            <td>Upcoming events</td>
-                            <td>Terms & conditions</td>
-                        </tr>
-                    </table>
-                    <img src="https://lh3.googleusercontent.com/isHqUOsF4W8mb9r8avCKK1dt0Ue8OvpdeDJJiONRg0TCChooPJtrqaPdRwuYgglJZntsTQ=s110" class="logo">
-                    <h1>African Film Festivals</h1>
-                    <div class="languages">
-                        <ul>
-                            <li>English</li>
-                            <li>Kiswahili</li>
-                            <li>Deutsch</li>
-                            <li>Espanol</li>
-                            <li>Portugues</li>
-                            <li>Francais</li>
-                        </ul>
-                    </div>
-                    </footer>
+            </div>
+        </div>
+        <div class="contacts">
+                <footer>
+                <table>
+                    <tr id="row">
+                        <th>Account</th>
+                        <th>Info</th>
+                    </tr>
+                    <tr id="row">
+                        <td>Log in</td>
+                        <td>Help</td>
+                    </tr>
+                    <tr id="row">
+                        <td>Register</td>
+                        <td>Contact us</td>
+                    </tr>
+                    <tr id="row">
+                        <td>My account</td>
+                        <td>Security & privacy</td>
+                    </tr>
+                    <tr id="row">
+                        <td>latest news</td>
+                        <td>News & Trends</td>
+                    </tr>
+                    <tr id="row">
+                        <td>Upcoming events</td>
+                        <td>Terms & conditions</td>
+                    </tr>
+                </table>
+                <div class="festivals">
+                <img src="https://lh3.googleusercontent.com/isHqUOsF4W8mb9r8avCKK1dt0Ue8OvpdeDJJiONRg0TCChooPJtrqaPdRwuYgglJZntsTQ=s110" class="logo" height="180">
+                <h1 class="film">African Film Festivals</h1>
                 </div>
+                <div class="languages">
+                    <ul>
+                        <li>English</li>
+                        <li>Kiswahili</li>
+                        <li>Deutsch</li>
+                        <li>Espanol</li>
+                        <li>Portugues</li>
+                        <li>Francais</li>
+                    </ul>
+                </div>
+                </footer>
+            </div>
             </div>
             </div>
         </body>
