--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2019 Drama Festivals</title>
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Spicy+Rice&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -14,29 +16,26 @@
             <li><a href="about.html">About</a></li>
             <li><a href="awards.html">Awards</a></li>
             <li><a href="events.html">Events</a></li>
-        </ul>
     </nav>
     <div class="container">
         <div id="overlay">
-        <h1>
+        <h1 id="annual">
             Annual Drama Festivals
         </h1>
-        <video width="400" height="200" controls>
-            <source src="https://www.youtube.com/watch?v=yD5gFPS0NUg" type="video/m4v">
-        </video>
+        <img class="tradi" src="https://www.kenyabuzz.com/public/uploads/events/f36404177252e0fe49d291e74644de53.jpg" width="800" height="400">
         <p>
-                The Kenya Schools and Colleges Drama Festival is student competitions in different kind of scripts it was first held in 1959, and it is held annually from January to April. It involves different stages in which schools advance from i.e from local stages to county stages to regional and then the final stage is the nationals. Its covers al levels of education in kenya from primary, secondary and college, which is a total of approximately five million students which makes it the largest eduacation event in Africa. The first college drama festivals were held in 1975 while the first primary school festivals were held in 1984. In the recent years the traditional plays have been expanded to include; dramatised verse, cultural traditional dance, african story telling narratives, stand-up comedy, modern dance and film. The annual national event attracts all kinds of people and this can be seen during the opening and closing ceremony, the 2019 opening ceremony was attended by 
-                governors from different counties and ministers from different ministres. The ceremony is usually opened by the chairman who addreses all the people in attendance after that guests are entertained by a short play and then the ceremony kicks off. 
+                The Kenya Schools and Colleges Drama Festival is student competitions in different kind of scripts it was first held in 1959, and it is held annually from January to April. It involves different stages in which schools advance from i.e from local stages to county stages to regional and then the final stage is the nationals. Its covers al levels of education in kenya from primary, secondary and college, which is a total of approximately five million students which makes it the largest eduacation event in Africa. The first college drama festivals were held in 1975 while the first primary school festivals were held in 1984. In the recent years the traditional plays have been expanded to include; dramatised verse, cultural traditional dance, african story telling narratives, stand-up comedy, modern dance and film. The ceremony is usually opened by the chairman who addreses all the people in attendance after that guests are entertained by a short play and then the ceremony kicks off.<a class="learn" href="https://en.unesco.org/creativity/policy-monitoring-platform/kenya-school-music-drama">click here</a>
         </p>
         <div class="management">
-            <h2>Management and Administration</h2>
-            <img class="chairman" alt="chairman" src="https://lh3.googleusercontent.com/4Q5bo-BxzJq29yWEM0Q8eMdkWeMAMNyGxHzsLR2cikbEXGfb6Q6BeNVmL0NrUHsRA5LN0g=s128" height="200">
+            <h2 id="management">Management and Administration</h2>
+            <img class="chairman" alt="chairman" src="https://lh3.googleusercontent.com/4Q5bo-BxzJq29yWEM0Q8eMdkWeMAMNyGxHzsLR2cikbEXGfb6Q6BeNVmL0NrUHsRA5LN0g=s128" height="120">
         <h5>Prof. C J Odhiambo - Chairman</h5>
-            <img class="ambasador" alt="Ambasador" src="https://lh3.googleusercontent.com/pnTafgWBgc0Es34QZF8P7uDa75KhUtOY-8d9YqrUvCDuodw3L5GT0YVWI65qx7hvO4MIhqo=s138" height="200">
+            <img class="ambasador" alt="Ambasador" src="https://lh3.googleusercontent.com/pnTafgWBgc0Es34QZF8P7uDa75KhUtOY-8d9YqrUvCDuodw3L5GT0YVWI65qx7hvO4MIhqo=s138" height="120">
         <h5>Walter Mong’are - Drama ambassador for the KNDFF</h5>
-        <img class="secretary" alt="Secretary" src="https://lh3.googleusercontent.com/-HixKg0et25A/XUv-xRKryvE/AAAAAAAAAAs/kiF_GwjlDjImZlVer_Y7guVwCt8tv82YQCEwYChgb/w163-h110-p/6722746991155858161" height="200">
+        <img class="secretary" alt="Secretary" src="https://lh3.googleusercontent.com/-HixKg0et25A/XUv-xRKryvE/AAAAAAAAAAs/kiF_GwjlDjImZlVer_Y7guVwCt8tv82YQCEwYChgb/w163-h110-p/6722746991155858161" height="120">
         <h5>Louis Odhiambo - Secretary General</h5>
         </div>
+        </div>    
         <div class="contacts">
             <footer>
             <table>
@@ -67,7 +66,7 @@
             </table>
             <div class="festivals">
             <img src="https://lh3.googleusercontent.com/isHqUOsF4W8mb9r8avCKK1dt0Ue8OvpdeDJJiONRg0TCChooPJtrqaPdRwuYgglJZntsTQ=s110" class="logo" height="180">
-            <h1>African Film Festivals</h1>
+            <h1 class="film">African Film Festivals</h1>
             </div>
             <div class="languages">
                 <ul>
@@ -81,7 +80,6 @@
             </div>
             </footer>
         </div>
-    </div>
     </div>
 </body>
 </html>
