--- a/awards.html
+++ b/awards.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>2019 Drama Festivals</title>
+    <title>Awards</title>
+    <link rel="icon" type="image/jpg" href="https://lh3.googleusercontent.com/WvOb0yPUYnPzptrvVX7PQ9m-aC6pukmNPF3dJown83a1Wr-ynUtbl7U_x1gMd7nZY_QieXk=s128">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="awards.css">
 </head>
 <body>
@@ -17,15 +19,21 @@
                     <li><a href="awards.html">Awards</a></li>
                     <li><a href="events.html">Events</a></li>
                 </ul>
+                <div class="icon-bar">
+                    <a href="https://www.facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a> 
+                    <a href="https://twitter.com/login?lang=en" class="twitter"><i class="fa fa-twitter"></i></a> 
+                    <a href="https://www.google.com/" class="google"><i class="fa fa-google"></i></a> 
+                    <a href="https://www.instagram.com/" class="instagram"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/" class="youtube"><i class="fa fa-youtube"></i></a> 
+                  </div>
             </nav>
         <div class="container">
-            <div id="overlay">
             <h1 class="awards">
                 Awards
             </h1>
-            <img src="https://lh3.googleusercontent.com/sCPNGquqsPpqvEZNmB7ka7NUZkKbX4S3A2s6gGAQ-1dFQAPyCGDTDk0gCFYsp1iSB9cG=s136" class="winners" height="200">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTg7CC39nJ7VIrWxBQ0Kc_5avAAJ4ib3NfuDVf5f5KOc6pPfvkj&s" class="winners" height="200">
             <p>
-             Makini school wins the junior category for the best play in 2019!!
+             Nairobi international schools gets a standing ovation!!<a class="learn" href="https://www.nis.ac.ke/preparatory/">more info</a>
             </p>
             <h1>
                 List of winners of 2019 Kenya National Drama and Film Festival 
@@ -187,38 +195,37 @@
             </table>
             </div>
         </div>
-        <div class="contacts">
+        <div class="footer">
                 <footer>
-                <table>
-                    <tr id="row">
+                        <div class="festivals">
+                                <h1 class="film">African Film Festivals</h1>
+                                </div>
+                 <table class="table">
+                    <tr>
                         <th>Account</th>
                         <th>Info</th>
                     </tr>
-                    <tr id="row">
+                    <tr>
                         <td>Log in</td>
                         <td>Help</td>
                     </tr>
-                    <tr id="row">
+                    <tr>
                         <td>Register</td>
                         <td>Contact us</td>
                     </tr>
-                    <tr id="row">
+                    <tr>
                         <td>My account</td>
                         <td>Security & privacy</td>
                     </tr>
-                    <tr id="row">
+                    <tr>
                         <td>latest news</td>
                         <td>News & Trends</td>
                     </tr>
-                    <tr id="row">
+                    <tr>
                         <td>Upcoming events</td>
                         <td>Terms & conditions</td>
                     </tr>
                 </table>
-                <div class="festivals">
-                <img src="https://lh3.googleusercontent.com/isHqUOsF4W8mb9r8avCKK1dt0Ue8OvpdeDJJiONRg0TCChooPJtrqaPdRwuYgglJZntsTQ=s110" class="logo" height="180">
-                <h1 class="film">African Film Festivals</h1>
-                </div>
                 <div class="languages">
                     <ul>
                         <li>English</li>
@@ -231,10 +238,5 @@
                 </div>
                 </footer>
             </div>
-            </div>
-            </div>
-        </body>
-        </html>
-        </div>    
-</body>
-</html>
+    </body>
+    </html>
